fix: small change to test responsive fix on tablet device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,7 +574,7 @@ ul {
 }
 
     .article-selection div {
-    width: 200px; 
+    width: 175px; 
     margin: 60px 1px; 
 }
 
